--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
-    gap: 50px;
+    gap: 5px;
     
     }
 
@@ -17,14 +17,15 @@
      margin-left: 10%;
      background-color: black;
      border-radius: 100%;
-    } 
-
+    }
     .horarios {margin: 0;
     width: 400px;
     margin-left: 5%;
+   }
+  
 }
 
-}
+
 
 /* Pagina Servicios */
 
@@ -35,10 +36,15 @@
  
  }
  
- .fot {width: 10%;
-     margin-right: 240px;   
+ .fot {margin: 0;
+    padding: 50px;
+    width: 10%;
+     margin-right: 225px;   
  
  }
+ 
+
+
  }
 
  /* Pagina Promos */
