--- a/scss/styles.css
+++ b/scss/styles.css
@@ -29,15 +29,20 @@ body {
   width: 300px;
   height: auto;
 }
+.container-fluid .navbar-toggler {
+  margin-top: 100px;
+}
+.container-fluid .navbar-nav {
+  margin-top: 20%;
+}
 .container-fluid #navbarNav li a {
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  padding: 10px;
+  padding: 5px;
   background-color: burlywood;
   border-radius: 10px;
-  margin-top: 200px;
 }
 .container-fluid #navbarNav li a:hover {
   background-color: aqua;
@@ -58,6 +63,7 @@ section div {
   width: 450px;
   height: 350px;
   margin: 200px auto;
+  margin-top: 150px;
   text-shadow: 2px 2px 4px;
   border-radius: 30%;
   padding: 10px;
@@ -204,7 +210,7 @@ main h3 {
     justify-content: center;
     align-items: center;
     height: auto;
-    gap: 50px;
+    gap: 5px;
   }
   .container-fluid .logo {
     max-width: 100%;
@@ -228,8 +234,10 @@ main h3 {
     margin-top: 80px;
   }
   .fot {
+    margin: 0;
+    padding: 50px;
     width: 10%;
-    margin-right: 240px;
+    margin-right: 225px;
   }
 }
 /* Pagina Promos */
