--- a/scss/_quienesSomos.scss
+++ b/scss/_quienesSomos.scss
@@ -7,7 +7,11 @@
      margin-top: 250px;
      margin-bottom: 250px;
        
-    p {color: aqua;}  
+    p {color: yellow;} 
+    
+    .qui {
+        font-family: 'Bebas Neue', sans-serif;
+      }
 
    
 
