--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -22,7 +22,8 @@
     .fot .ite .pic11 {padding: 30px;}
     .fot .ite .pic44 {padding: 30px;}
             
-    .tituloServicios {margin-top: 20px;}
+    .tituloServicios {margin-top: 20px;
+        font-family: 'Bebas Neue', sans-serif;}
             
     .cortes {margin-top: 20px;
                 color: burlywood;
@@ -42,6 +43,10 @@
             background-position: center;
             padding: 20px;
             border-radius: 10%;}
+    
+    h3 {
+            font-family: 'Lobster', cursive;
+              }
 
 
 
